# Provision

./: .clang-format  .editorconfig  .gitignore  .gitmodules  2  CMakeLists.txt  Dockerfile  LISEZMOI.md  LibraryLoader.cpp  LibraryLoader.h  Provision.kdev4  README.md  docker-entrypoint.sh  dub.json  dub.sdl  dub.selections.json  lisezmoi-fr.md  main.cpp  meson.build  readme-en.md  test.txt
.github/: FUNDING.yml  pull.yml
.github/workflows/: cmake-cross-compile.yml  cmake-macos.yml  cmake-windows.yml  cmake.yml  docker-publish-anisette-server.yml  docker-publish-anisette_server.yml
.kdev4/: Provision.kdev4
adi_server/: app.d
anisette_server/: Dockerfile  app.d  constants.d  docker-entrypoint.sh  lib_cleanup.sh
bindings/java/d/: java.d
bindings/java/d/arsd/: jni.d
bindings/java/java/dadoum/: ADI.java  OneTimePassword.java
bindings/java/java/dadoum/provision/: ADI.java  OneTimePassword.java
bindings/java/source/: java.d
cmake/: dependencies.cmake
cxx_interop_example/: main.cpp
docs/: ADI.md
docs/en/: sipa_setup.md
docs/fr/: sipa_configuration.md
include/: LibraryHelper.hpp  LibraryLoader.h
lib/provision/: adi.d  androidlibrary.d  c.d  ilibrary.d  package.d  posixlibrary.d  symbols.d
lib/provision/android/: id.d
lib/provision/compat/: general.d  linux.d  macos.d  windows.d
lib/provision/plist/: c.d  package.d
lib/standard/: README  elf.d  link.d
lib/std_edit/: elf.d  link.d  linux_stat.d
mkcassette/: app.d  constants.d
ndk/: NOTICE
retrieve_headers/: app.d
rt/: object.d
sideload_ipa/: app.d
sideload_ipa/sideloadipa/: appleloginsession.d  filechooserbuttonnative.d  identity.d  iflowslide.d  loginassistant.d  loginslide.d  sideloadwindow.d  tfaslide.d  utils.d
sideload_ipa/sideloadipa/imobiledevice/: libimobiledevice.d  lockdown.d  package.d
sideload_ipa/sideloadipa/plist/: c.d  package.d
src/: LibraryHelper.cpp  LibraryLoader.cpp  app.d  main.cpp  meson.build
src-glue/: glue.cpp  meson.build
src/android/: id.d
src/cpp/: glue.cpp
src/provision/: androidclass.d  androidclass.d-new  androidclass.d-refactor  androidlibrary.d  glue.d  librarybundle.d
src/provision/android/: androidcredentialsresponsehandler.d  androidpresentationinterface.d  androidprotocoldialogresponsehandler.d  androidrequestcontextobserver.d  anisetteprotocolaction.d  authenticateflow.d  contentbundle.d  credentialrequest.d  data.d  defaultstoreclient.d  deviceguid.d  fairplay.d  filepath.d  foothillconfig.d  httpproxy.d  mescal.d  ndkstring.d  protocolaction.d  protocoldialog.d  protocoldialogresponse.d  rapidandroidprototyper.d  requestcontext.d  requestcontextconfig.d  requestcontextmanager.d  requestcontextptr.d  storeerrorcondition.d  urlbagrequest.d
src/provision/utils/: loghelper.d  segfault.d
src/ssoulaimane/stdcpp/: vector.d
subprojects/: libhybris.wrap  libjnivm.wrap
subprojects/libprovision-glue/: glue.cpp  meson.build
toolchains/: rpi-2-no-suffix.cmake  rpi-2.cmake  rpi-4-no-suffix.cmake  rpi-4.cmake  windows.cmake
