provision_sources += files(
  'app.d',
  'provision/androidlibrary.d',
  'provision/androidclass.d',
  'provision/librarybundle.d',
  'provision/utils/loghelper.d',
  'provision/android/requestcontextconfig.d',
  'provision/android/foothillconfig.d',
  'provision/android/storeerrorcondition.d',
  'provision/android/ndkstring.d',
  'provision/android/androidrequestcontextobserver.d',
  'provision/android/requestcontextmanager.d',
  'provision/android/requestcontext.d',
  'provision/android/contentbundle.d',
  'provision/android/filepath.d',
  'provision/android/deviceguid.d',
  'provision/android/httpproxy.d',
  'ssoulaimane/stdcpp/vector.d',
)
