provision_sources += files(
  'app.d',
  'provision/androidclass.d',
  'provision/androidlibrary.d',
  'provision/glue.d',
  'provision/librarybundle.d',
  'provision/android/androidrequestcontextobserver.d',
  'provision/android/anisetteprotocolaction.d',
  'provision/android/contentbundle.d',
  'provision/android/data.d',
  'provision/android/defaultstoreclient.d',
  'provision/android/deviceguid.d',
  'provision/android/filepath.d',
  'provision/android/foothillconfig.d',
  'provision/android/httpproxy.d',
  'provision/android/mescal.d',
  'provision/android/ndkstring.d',
  'provision/android/protocoldialog.d',
  'provision/android/rapidandroidprototyper.d',
  'provision/android/requestcontext.d',
  'provision/android/requestcontextconfig.d',
  'provision/android/requestcontextmanager.d',
  'provision/android/storeerrorcondition.d',
  'provision/android/urlbagrequest.d',
  'provision/utils/loghelper.d',
  'provision/utils/segfault.d',
)
